- Added GUI to Kegs
- Added Sounds to Kegs
- Added Devourer spawn ability to Beast Scythe
- Added Bows tooltips
- Added Sound to Tombstone
- Added More Biomes to Valoria Dimension
- Added way to obtain Pearlium
- Added own LootTable to Crystallized Deep Ruins
- Added Elemental Smithing Templates
- Added Shader Rendering to Valoria Portal (Thanks to MaxBogomol for helping)

- Deleted Geodites (Drops moved to ephemarite)
- Deleted Void Crystal
- Deleted "needs_iron_tool" tag (unused)

- Optimized Katanas
- Optimized Murasama

- Reworked Goblins
- Reworked Scythes
- Reworked Katanas
- Reworked Murasama
- Reworked Overlay Rendering
- Reworked Overlay items
- Reworked Bleeding FX
- Reworked Kegs
- Reworked Projectiles
- Reworked Necromancer Fangs -> Devourer
- Reworked Bows
- Reworked Elemental Progression

- Decreased amount of bones dropped from Goblins
- Decreased Cooldown time for Scythes from 100 to 75, if no one was hit to 15
- Decreased Droprate of Gunpowder in Ephemarite crushing
- Decreased Droprate of Geodes from Ephemarite mining

- Buffed Katanas
- Katanas cant be used in offhand now (Causes to many troubles lol)
- Changed Item Tabs Sorting
- Changed Tipsy effect balance
- Drinks are placeable now
- Drinks are stackable up to 64 now
- Animated Goblins
- Resprited all the drinks
- Updated to Forge 47.2.20

# Changelog v0.6.1
- Now Valoria requires Lodestone
- Various playability changes

- Added Custom Voxel shapes to some blocks
- Added some Recipes
- Added Firefly like particles, spawned in Shadeforest
- Added Particles for Bandages
- Added Shade Blossom
- Added Shade Blossom Bandage
- Added Pots Generation
- Added some sort of Necromancy

- Reworked Stone Crusher (A bit)
- Reworked Accessories
- Reworked BlazeReap
- Reworked Bandages
- Decreased amount of bones dropped from Goblins
- Nerfed Tipsy Effect:
    Armor 35% -> 10%
    Damage 45% -> 15%

- ID change of "pick" -> "prospectors_pick"
- Changed spawnables in Valoria dimension
