@@ -1,6 +1,6 @@
 {
   "parent": "item/generated",
   "textures": {
-    "layer0": "valoria:block/valoria_portal"
+    "layer0": "valoria:item/black_gold_ingot"
   }
 }
