@@ -1,75 +1,92 @@
 {
-  "parent": "item/handheld",
+  "parent": "valoria:item/handheld_large",
   "textures": {
-    "layer0": "valoria:item/blaze_reap"
+    "layer0": "valoria:item/arcane_gold_blaze_reap_in_hand"
   },
   "display": {
     "firstperson_righthand": {
       "rotation": [
         0,
-        90,
-        25
+        -90,
+        45
       ],
       "translation": [
         1.13,
-        3.2,
-        1.13
+        3.4,
+        0.60
       ],
       "scale": [
-        0.68,
-        0.68,
-        0.68
+        1.7,
+        1.7,
+        1.2
       ]
     },
     "firstperson_lefthand": {
       "rotation": [
         0,
-        -90,
-        -25
+        90,
+        -45
       ],
       "translation": [
         1.13,
-        3.2,
-        1.13
+        3.4,
+        0.60
       ],
       "scale": [
-        0.68,
-        0.68,
-        0.68
+        1.7,
+        1.7,
+        1.2
       ]
     },
     "thirdperson_righthand": {
       "rotation": [
         0,
-        90,
+        -90,
         55
       ],
       "translation": [
         0,
-        4.75,
-        2
+        1.75,
+        -0.45
       ],
       "scale": [
-        0.85,
-        0.95,
-        0.85
+        1.8,
+        2.1,
+        1.2
       ]
     },
     "thirdperson_lefthand": {
       "rotation": [
         0,
-        -90,
+        90,
         -55
       ],
       "translation": [
         0,
-        4.75,
-        2
+        1.75,
+        -0.45
       ],
       "scale": [
-        0.85,
-        0.95,
-        0.85
+        1.8,
+        2.1,
+        1.2
+      ]
+    },
+    "gui": {
+      "rotation": [
+        0,
+        0,
+        0
+      ],
+      "translation": [
+        0,
+        0,
+        0
+      ],
+      "scale": [
+        1,
+        1,
+        1
       ]
     }
   }
