@@ -62,6 +62,7 @@
 - Added Elemental Smithing Templates
 - Added Shader Rendering to Valoria Portal (Thanks to MaxBogomol for helping)
 
+
 - Deleted Geodites (Drops moved to ephemarite)
 - Deleted Void Crystal
 - Deleted "needs_iron_tool" tag (unused)
@@ -95,6 +96,7 @@
 - Drinks are stackable up to 64 now
 - Animated Goblins
 - Resprited all the drinks
+- Resprited Cobalt Ingot
 - Updated to Forge 47.2.20
 
 # Changelog v0.6.1
